--- a/package.json
+++ b/package.json
@@ -143,6 +143,13 @@
         "all"
       ],
       "@typescript-eslint/no-unused-vars": "off",
+      "@typescript-eslint/consistent-type-assertions": [
+        "error",
+        {
+          "assertionStyle": "as",
+          "objectLiteralTypeAssertions": "never"
+        }
+      ],
       "unused-imports/no-unused-imports-ts": "warn",
       "functional/no-expression-statement": "off",
       "functional/functional-parameters": "off",
